--- a/home/wiki/Change_log/2014.html
+++ b/home/wiki/Change_log/2014.html
@@ -587,7 +587,7 @@
     </p>
     <ul>
       <li>
-        Options: Fix UI language staying as English after reloading XOWA. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_5" title="Options/Language" class="xowa-visited">Options/Language</a>
+        Options: Fix UI language staying as English after reloading XOWA. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_5" title="Options/Language">Options/Language</a>
       </li>
     </ul>
     <p>
@@ -706,7 +706,7 @@
     </p>
     <ul>
       <li>
-        Doc: Add note explaining image tarballs and tarball status {suggested by anonymous}. See: <a href="http://xowa.org/home/wiki/Archive/Usage/Offline_images.html" id="xolnki_6" title="Archive/Usage/Offline images">Archive/Usage/Offline_images</a> <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_7" title="App/Import/English Wikipedia">App/Import/English_Wikipedia</a>
+        Doc: Add note explaining image tarballs and tarball status {suggested by anonymous}. See: <a href="http://xowa.org/home/wiki/Archive/Usage/Offline_images.html" id="xolnki_6" title="Archive/Usage/Offline images">Archive/Usage/Offline_images</a> <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_7" title="App/Import/English Wikipedia" class="xowa-visited">App/Import/English_Wikipedia</a>
       </li>
     </ul>
     <p>
@@ -869,7 +869,7 @@
     </p>
     <ul>
       <li>
-        Wikivoyage.RelatedArticles: Fix {{#related:Page}} not working (affects many en.v pages showing {{#related}} at bottom); EX:/xowa/bin/any/xowa/cfg/lang/en.gfs. See: <a href="https://en.wikivoyage.org/wiki/China" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/China</a> <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_9" title="Diagnostics/Xtns/Wikivoyage/All" class="xowa-visited">Diagnostics/Xtns/Wikivoyage/All</a>
+        Wikivoyage.RelatedArticles: Fix {{#related:Page}} not working (affects many en.v pages showing {{#related}} at bottom); EX:/xowa/bin/any/xowa/cfg/lang/en.gfs. See: <a href="https://en.wikivoyage.org/wiki/China" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/China</a> <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_9" title="Diagnostics/Xtns/Wikivoyage/All">Diagnostics/Xtns/Wikivoyage/All</a>
       </li>
     </ul>
     <p>
@@ -1845,7 +1845,7 @@
         Module.Popups: Increase hover show time from 400 to 600 ms (affects number of accidental hovers while scrolling through page). See: <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_21" title="Options/Popups">Options/Popups</a>
       </li>
       <li>
-        Options: Add options for configuring paths of other apps. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_22" title="Options/Files" class="xowa-visited">Options/Files</a> <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_23" title="Options/Math" class="xowa-visited">Options/Math</a> <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_24" title="Options/Score">Options/Score</a> <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_25" title="Options/Import" class="xowa-visited">Options/Import</a>
+        Options: Add options for configuring paths of other apps. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_22" title="Options/Files" class="xowa-visited">Options/Files</a> <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_23" title="Options/Math">Options/Math</a> <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_24" title="Options/Score">Options/Score</a> <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_25" title="Options/Import" class="xowa-visited">Options/Import</a>
       </li>
     </ul>
     <p>
@@ -2215,7 +2215,7 @@
     </p>
     <ul>
       <li>
-        Gui.Tabs: Fix tab options not restored for Tab Height, Close Visible and Unselected Close Visible. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_35" title="Options/Tabs" class="xowa-visited">Options/Tabs</a> [broken since:start]
+        Gui.Tabs: Fix tab options not restored for Tab Height, Close Visible and Unselected Close Visible. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_35" title="Options/Tabs">Options/Tabs</a> [broken since:start]
       </li>
       <li>
         Options: Escape HTML characters in &lt;textarea&gt; (affects content code format incorrectly using "&lt;pre&gt;"). See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_36" title="Options/Wiki/HTML">Options/Wiki/HTML</a>
@@ -2229,7 +2229,7 @@
         Javascript: Add gadget to show / hide NavFrames. See: <a href="https://en.wikipedia.org/wiki/Teresa_of_Ávila" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Teresa_of_Ávila</a>
       </li>
       <li>
-        Javascript: Add option to control default show / hide state of Table of Contents. See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_37" title="Options/Wiki/HTML">Options/Wiki/HTML</a> <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Table_of_contents.html" id="xolnki_38" title="Diagnostics/Javascript/Table of contents" class="xowa-visited">Diagnostics/Javascript/Table_of_contents</a>
+        Javascript: Add option to control default show / hide state of Table of Contents. See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_37" title="Options/Wiki/HTML">Options/Wiki/HTML</a> <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Table_of_contents.html" id="xolnki_38" title="Diagnostics/Javascript/Table of contents">Diagnostics/Javascript/Table_of_contents</a>
       </li>
       <li>
         Javascript: Add option to control default show / hide state of collapsible tables. See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_39" title="Options/Wiki/HTML">Options/Wiki/HTML</a> <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Collapsible.html" id="xolnki_40" title="Diagnostics/Javascript/Collapsible">Diagnostics/Javascript/Collapsible</a>
@@ -2238,7 +2238,7 @@
         Javascript: Add option to control default show / hide state of NavFrames. See: <a href="http://xowa.org/home/wiki/Options/Wiki/HTML.html" id="xolnki_41" title="Options/Wiki/HTML">Options/Wiki/HTML</a> <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/NavFrame.html" id="xolnki_42" title="Diagnostics/Javascript/NavFrame">Diagnostics/Javascript/NavFrame</a>
       </li>
       <li>
-        Gui.Tab: Add option to hide tab bar if 1 or 0 tabs {suggested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_43" title="Options/Tabs" class="xowa-visited">Options/Tabs</a>
+        Gui.Tab: Add option to hide tab bar if 1 or 0 tabs {suggested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_43" title="Options/Tabs">Options/Tabs</a>
       </li>
       <li>
         Gui.Url_bar: Add shortcut to open multiple lines in separate tabs; EX:Copy "a\nb" to clipboard -&gt; Ctrl + Enter.
@@ -2435,7 +2435,7 @@
         Wikivoyage.Listings: Handle invalid key-less attribute for wikis with a listing-template (affects some listings not showing); EX:&lt;sleep name='name_0' 'invalid'&gt;&lt;/sleep&gt;. See: <a href="https://nl.wikivoyage.org/wiki/Rome" rel="nofollow" class="external free">https://nl.wikivoyage.org/wiki/Rome</a>
       </li>
       <li>
-        Options: Escape single quotes / double quotes for &lt;input&gt; value; EX:&lt;input value="a'b"/&gt;. See: <a href="http://xowa.org/home/wiki/Options/HTML_Tidy.html" id="xolnki_52" title="Options/HTML Tidy" class="xowa-visited">Options/HTML_Tidy</a>
+        Options: Escape single quotes / double quotes for &lt;input&gt; value; EX:&lt;input value="a'b"/&gt;. See: <a href="http://xowa.org/home/wiki/Options/HTML_Tidy.html" id="xolnki_52" title="Options/HTML Tidy">Options/HTML_Tidy</a>
       </li>
       <li>
         Gui: Handle errors while trying to show error page (affects endless recursion if fatal error during logging). See: <a href="https://en.wikipedia.org/wiki/Portal:Current_events/2006_September_7" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Portal:Current_events/2006_September_7</a>
@@ -2540,7 +2540,7 @@
     </p>
     <ul>
       <li>
-        Html.Jtidy: Make JTidy the default Tidy engine. See: <a href="http://xowa.org/home/wiki/Diagnostics/HTML_Tidy.html" id="xolnki_54" title="Diagnostics/HTML Tidy" class="xowa-visited">Diagnostics/HTML_Tidy</a>
+        Html.Jtidy: Make JTidy the default Tidy engine. See: <a href="http://xowa.org/home/wiki/Diagnostics/HTML_Tidy.html" id="xolnki_54" title="Diagnostics/HTML Tidy">Diagnostics/HTML_Tidy</a>
       </li>
       <li>
         Lang.Numbers: Translate numbers for Arabic languages (affects many pages showing large images); EX:{{formatnum:۱۵۰|R}} -&gt; 150. See: <a href="https://fa.wikipedia.org/wiki/نیشابور" rel="nofollow" class="external free">https://fa.wikipedia.org/wiki/نیشابور</a>
@@ -2554,10 +2554,10 @@
         Gui: Support customizable keyboard shortcuts. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_55" title="Options/Shortcuts">Options/Shortcuts</a>
       </li>
       <li>
-        Gui: Update UI language dynamically (do not require restart). See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_56" title="Options/Language" class="xowa-visited">Options/Language</a>
+        Gui: Update UI language dynamically (do not require restart). See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_56" title="Options/Language">Options/Language</a>
       </li>
       <li>
-        Gui: Expand number of available UI languages. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_57" title="Options/Language" class="xowa-visited">Options/Language</a>
+        Gui: Expand number of available UI languages. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_57" title="Options/Language">Options/Language</a>
       </li>
       <li>
         Gui: Enable hide / show on table of contents. See: <a href="https://en.wikipedia.org/wiki/Palenque" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Palenque</a>
@@ -2787,7 +2787,7 @@
         Gui: Add popup menu for clicking on file. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_66" title="Options/Menus">Options/Menus</a>
       </li>
       <li>
-        Gui: Add option for min chars / max chars in tab buttons. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_67" title="Options/Tabs" class="xowa-visited">Options/Tabs</a>
+        Gui: Add option for min chars / max chars in tab buttons. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_67" title="Options/Tabs">Options/Tabs</a>
       </li>
     </ul>
     <p>
@@ -2890,19 +2890,19 @@
         Gui.Tabs.Buttons: Show url as tooltip.
       </li>
       <li>
-        Gui.Tabs.Buttons: Add option for place on top. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_69" title="Options/Tabs" class="xowa-visited">Options/Tabs</a>
+        Gui.Tabs.Buttons: Add option for place on top. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_69" title="Options/Tabs">Options/Tabs</a>
       </li>
       <li>
-        Gui.Tabs.Buttons: Add option for tab height. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_70" title="Options/Tabs" class="xowa-visited">Options/Tabs</a>
+        Gui.Tabs.Buttons: Add option for tab height. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_70" title="Options/Tabs">Options/Tabs</a>
       </li>
       <li>
-        Gui.Tabs.Buttons: Add option for curved button. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_71" title="Options/Tabs" class="xowa-visited">Options/Tabs</a>
+        Gui.Tabs.Buttons: Add option for curved button. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_71" title="Options/Tabs">Options/Tabs</a>
       </li>
       <li>
-        Gui.Tabs.Buttons: Add option for close button visible. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_72" title="Options/Tabs" class="xowa-visited">Options/Tabs</a>
+        Gui.Tabs.Buttons: Add option for close button visible. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_72" title="Options/Tabs">Options/Tabs</a>
       </li>
       <li>
-        Gui.Tabs.Buttons: Add option for unselected close button visible. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_73" title="Options/Tabs" class="xowa-visited">Options/Tabs</a>
+        Gui.Tabs.Buttons: Add option for unselected close button visible. See: <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_73" title="Options/Tabs">Options/Tabs</a>
       </li>
     </ul>
     <p>
@@ -2986,7 +2986,7 @@
         Gui.Url_bar: Do not lose history page position after editing page; EX:Open page -&gt; Scroll down -&gt; Click link -&gt; Edit -&gt; Click back -&gt; Position should be restored {detected by Schnark}.
       </li>
       <li>
-        Gui: Fix StackOverflow exception when auto_focus_id is " first_anchor" and exiting app on Help:Options page. See: <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_76" title="Options/Scribunto" class="xowa-visited">Options/Scribunto</a>
+        Gui: Fix StackOverflow exception when auto_focus_id is " first_anchor" and exiting app on Help:Options page. See: <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_76" title="Options/Scribunto">Options/Scribunto</a>
       </li>
       <li>
         Html: Remove exit link from upper left hand corner.
@@ -3754,7 +3754,7 @@
     </p>
     <ul>
       <li>
-        Scribunto: Add luaj as alternate lua engine. See: <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_81" title="Options/Scribunto" class="xowa-visited">Options/Scribunto</a>
+        Scribunto: Add luaj as alternate lua engine. See: <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_81" title="Options/Scribunto">Options/Scribunto</a>
       </li>
     </ul>
     <p>
@@ -3835,7 +3835,7 @@
         Wikivoyage.RelatedArticles: Implement #relatedArticles. See: <a href="https://de.wikivoyage.org/wiki/Europa" rel="nofollow" class="external free">https://de.wikivoyage.org/wiki/Europa</a>
       </li>
       <li>
-        Html: Add option for tidy mgr. See: <a href="http://xowa.org/home/wiki/Options/HTML_Tidy.html" id="xolnki_84" title="Options/HTML Tidy" class="xowa-visited">Options/HTML_Tidy</a>
+        Html: Add option for tidy mgr. See: <a href="http://xowa.org/home/wiki/Options/HTML_Tidy.html" id="xolnki_84" title="Options/HTML Tidy">Options/HTML_Tidy</a>
       </li>
       <li>
         Parser.Underscore: Register "＿＿" as alternate prefix for double-underscore keywords; EX:＿＿目次＿＿. See: <a href="https://ja.wikipedia.org" rel="nofollow" class="external free">https://ja.wikipedia.org</a>
@@ -4026,7 +4026,7 @@
         Math: Note that MikTeX may fail to update images dynamically for first page {detected by William}.
       </li>
       <li>
-        Help.Contents: Redesign layout of Help:Contents. See: <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_91" title="Help/Contents" class="xowa-visited">Help/Contents</a>
+        Help.Contents: Redesign layout of Help:Contents. See: <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_91" title="Help/Contents">Help/Contents</a>
       </li>
     </ul>
     <p>
@@ -4220,7 +4220,7 @@
     </p>
     <ul>
       <li>
-        Import: Allow only one import at a time {detected by Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_98" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_99" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        Import: Allow only one import at a time {detected by Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_98" title="Dashboard/Import/Online">Dashboard/Import/Online</a> <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_99" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
       </li>
       <li>
         Messages: Add "Contatti" message for contactpage in itwiki sidebar. See: <a href="https://it.wikipedia.org" rel="nofollow" class="external free">https://it.wikipedia.org</a>
@@ -4391,7 +4391,7 @@
         Wikisource.Page: Support onlysection; EX:&lt;pages onlysection="a"/&gt;.
       </li>
       <li>
-        Import.List: Update list of WMF wikis (from 674 to 804); EX:pl.wikivoyage.org. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_101" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
+        Import.List: Update list of WMF wikis (from 674 to 804); EX:pl.wikivoyage.org. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_101" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
       </li>
       <li>
         Gui.Url_bar: Open articles with same name as language code; EX:war -&gt; current_wiki/wiki/war, not war.wikipedia.org.
