--- a/home/wiki/Change_log/2015.html
+++ b/home/wiki/Change_log/2015.html
@@ -424,7 +424,7 @@
     </p>
     <ul>
       <li>
-        Diagnostics: Add better messages for JTidy diagnostics. See: <a href="http://xowa.org/home/wiki/Diagnostics/HTML_Tidy.html" id="xolnki_3" title="Diagnostics/HTML Tidy" class="xowa-visited">Diagnostics/HTML_Tidy</a> <a href="http://xowa.org/home/wiki/Diagnostics/JTidy.html" id="xolnki_4" title="Diagnostics/JTidy" class="xowa-visited">Diagnostics/JTidy</a>
+        Diagnostics: Add better messages for JTidy diagnostics. See: <a href="http://xowa.org/home/wiki/Diagnostics/HTML_Tidy.html" id="xolnki_3" title="Diagnostics/HTML Tidy">Diagnostics/HTML_Tidy</a> <a href="http://xowa.org/home/wiki/Diagnostics/JTidy.html" id="xolnki_4" title="Diagnostics/JTidy">Diagnostics/JTidy</a>
       </li>
     </ul>
     <p>
@@ -549,7 +549,7 @@
     </p>
     <ul>
       <li>
-        Javascript: Position notification in "top center" not "top right". See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_5" title="Options/Window" class="xowa-visited">Options/Window</a>
+        Javascript: Position notification in "top center" not "top right". See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_5" title="Options/Window">Options/Window</a>
       </li>
     </ul>
     <p>
@@ -557,7 +557,7 @@
     </p>
     <ul>
       <li>
-        Diagnostics: Fix broken diagnostic for Wikivoyage. See: <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_6" title="Diagnostics/Xtns/Wikivoyage/All" class="xowa-visited">Diagnostics/Xtns/Wikivoyage/All</a>
+        Diagnostics: Fix broken diagnostic for Wikivoyage. See: <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_6" title="Diagnostics/Xtns/Wikivoyage/All">Diagnostics/Xtns/Wikivoyage/All</a>
       </li>
     </ul>
     <p>
@@ -630,7 +630,7 @@
         Interwiki: Show all available languages "In other languages", not just those specified in xowa.gfs. See: <a href="https://en.wikipedia.org/wiki/Earth" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Earth</a>
       </li>
       <li>
-        Import: Add support for building custom wikis. See: <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_8" title="App/Xtn/Import/Dansguardian" class="xowa-visited">App/Xtn/Import/Dansguardian</a>
+        Import: Add support for building custom wikis. See: <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_8" title="App/Xtn/Import/Dansguardian">App/Xtn/Import/Dansguardian</a>
       </li>
     </ul>
     <p>
@@ -680,7 +680,7 @@
         Doc: Add details for installing Firefox Addon for Pale Moon {suggested by pirate}. See: <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_9" title="App/Xtn/Browser/XOWA viewer">App/Xtn/Browser/XOWA_viewer</a>
       </li>
       <li>
-        Doc: Add details for dansguardian filter. See: <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_10" title="App/Xtn/Import/Dansguardian" class="xowa-visited">App/Xtn/Import/Dansguardian</a>
+        Doc: Add details for dansguardian filter. See: <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_10" title="App/Xtn/Import/Dansguardian">App/Xtn/Import/Dansguardian</a>
       </li>
     </ul>
     <p>
@@ -845,7 +845,7 @@
     </p>
     <ul>
       <li>
-        Setup: Restore save icon for Option pages {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_11" title="Options/Window" class="xowa-visited">Options/Window</a> [broken since:v2.8.5]
+        Setup: Restore save icon for Option pages {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_11" title="Options/Window">Options/Window</a> [broken since:v2.8.5]
       </li>
     </ul>
     <p>
@@ -1008,7 +1008,7 @@
     </p>
     <ul>
       <li>
-        Import: Fix broken urls for wikimedia wikis (affects 7 wikimedia dumps not importing) {detected by cd19s}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_13" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> <a href="https://ar.wikimedia.org" rel="nofollow" class="external free">https://ar.wikimedia.org</a> <a href="https://ca.wikimedia.org" rel="nofollow" class="external free">https://ca.wikimedia.org</a> <a href="https://be.wikimedia.org" rel="nofollow" class="external free">https://be.wikimedia.org</a> <a href="https://uk.wikimedia.org" rel="nofollow" class="external free">https://uk.wikimedia.org</a> <a href="https://br.wikimedia.org" rel="nofollow" class="external free">https://br.wikimedia.org</a> <a href="https://co.wikimedia.org" rel="nofollow" class="external free">https://co.wikimedia.org</a> <a href="https://se.wikimedia.org" rel="nofollow" class="external free">https://se.wikimedia.org</a>
+        Import: Fix broken urls for wikimedia wikis (affects 7 wikimedia dumps not importing) {detected by cd19s}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_13" title="Dashboard/Import/Online">Dashboard/Import/Online</a> <a href="https://ar.wikimedia.org" rel="nofollow" class="external free">https://ar.wikimedia.org</a> <a href="https://ca.wikimedia.org" rel="nofollow" class="external free">https://ca.wikimedia.org</a> <a href="https://be.wikimedia.org" rel="nofollow" class="external free">https://be.wikimedia.org</a> <a href="https://uk.wikimedia.org" rel="nofollow" class="external free">https://uk.wikimedia.org</a> <a href="https://br.wikimedia.org" rel="nofollow" class="external free">https://br.wikimedia.org</a> <a href="https://co.wikimedia.org" rel="nofollow" class="external free">https://co.wikimedia.org</a> <a href="https://se.wikimedia.org" rel="nofollow" class="external free">https://se.wikimedia.org</a>
       </li>
       <li>
         File: Use thumb size when specified for videos, not original size (affects several video thumbnails showing with large size); EX:[[File:A.ogv|thumb]] -&gt; 220px x&gt; original_px. See: <a href="https://en.wikipedia.org/wiki/Edward_Snowden" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Edward_Snowden</a> <a href="https://en.wikipedia.org/wiki/Xinjiang" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Xinjiang</a> <a href="https://en.wikipedia.org/wiki/Alice_Brady" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Alice_Brady</a> [broken since:v2.8.2]
@@ -1040,7 +1040,7 @@
         Javascript.Find: Allow search by backslash; EX:"C:\XOWA". See: <a href="http://xowa.org/home/wiki/App/Setup/Upgrading.html" id="xolnki_14" title="App/Setup/Upgrading">App/Setup/Upgrading</a>
       </li>
       <li>
-        API.Wikimedia: Add builder command for downloading wiki meta data. See: <a href="http://xowa.org/home/wiki/Dev/Command-line/Site_meta.html" id="xolnki_15" title="Dev/Command-line/Site meta" class="xowa-visited">Dev/Command-line/Site_meta</a>
+        API.Wikimedia: Add builder command for downloading wiki meta data. See: <a href="http://xowa.org/home/wiki/Dev/Command-line/Site_meta.html" id="xolnki_15" title="Dev/Command-line/Site meta">Dev/Command-line/Site_meta</a>
       </li>
     </ul>
     <p>
@@ -1611,7 +1611,7 @@
         Gui.Status: Default to showing full url, not shortened one; EX:"home/wiki/Main_Page" not "home/Main_Page" {detected by pirate}.
       </li>
       <li>
-        Options: Add option to show short link. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_25" title="Options/Window" class="xowa-visited">Options/Window</a>
+        Options: Add option to show short link. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_25" title="Options/Window">Options/Window</a>
       </li>
     </ul>
     <p>
@@ -1926,7 +1926,7 @@
     </p>
     <ul>
       <li>
-        Parser: Clear page variables in prefs_mgr (affects duplicate references on Option pages) {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_39" title="Options/Window" class="xowa-visited">Options/Window</a>
+        Parser: Clear page variables in prefs_mgr (affects duplicate references on Option pages) {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_39" title="Options/Window">Options/Window</a>
       </li>
     </ul>
     <p>
@@ -2067,7 +2067,7 @@
     </p>
     <ul>
       <li>
-        Options: Redesign Option pages to use tab interface {contributed by anonymous4}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_40" title="Options/Window" class="xowa-visited">Options/Window</a>
+        Options: Redesign Option pages to use tab interface {contributed by anonymous4}. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_40" title="Options/Window">Options/Window</a>
       </li>
       <li>
         Gui: Reduce page load errors due to popups (affects page sometimes loading incorrectly when popup is also loading); EX:hover over link and middle-click on it {detected by gnosygnu.gui}. See: <a href="https://en.wikipedia.org/wiki/Mark_Rolston" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Mark_Rolston</a> (See [[Private Mark Drake]] link)
@@ -2272,7 +2272,7 @@
         Wikidata: Use correct namespace / title when looking up wikidata wikis (affects wikidata language links / properties not working for titles in non-canonical namespaces); EX:"Author:A" -&gt; 102,A x&gt; 0,Author:A {detected by anonymous}. See: <a href="https://pt.wikisource.org/wiki/Autor:Humberto_de_Campos" rel="nofollow" class="external free">https://pt.wikisource.org/wiki/Autor:Humberto_de_Campos</a> [broken since:v2.4.2]
       </li>
       <li>
-        doc: Fix wrong wiki name for Wikidata; EX:Wikidata x&gt; Walloon Wiktionary {detected by anonymous}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_45" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> [broken since:v2.4.3]
+        doc: Fix wrong wiki name for Wikidata; EX:Wikidata x&gt; Walloon Wiktionary {detected by anonymous}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_45" title="Dashboard/Import/Online">Dashboard/Import/Online</a> [broken since:v2.4.3]
       </li>
     </ul>
     <p>
@@ -2393,7 +2393,7 @@
         Language: Show messages for Wikidata codes (affects &lt;some-key&gt; showing up on Wikidata instead of "value"); EX:&lt;Wikibase-entity-item&gt; -&gt; "item" {detected by anonymous}. See: <a href="https://www.wikidata.org" rel="nofollow" class="external free">https://www.wikidata.org</a>
       </li>
       <li>
-        Import: Add Nepal Wikipedia. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_46" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
+        Import: Add Nepal Wikipedia. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_46" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
       </li>
     </ul>
     <p>
@@ -2577,7 +2577,7 @@
     </p>
     <ul>
       <li>
-        Import: Add new wikimedia org wikis. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_51" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
+        Import: Add new wikimedia org wikis. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_51" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
       </li>
       <li>
         File: Download file if not available for offline database users.
