--- a/home/wiki/Change_log/v3.6.4.1.html
+++ b/home/wiki/Change_log/v3.6.4.1.html
@@ -112,7 +112,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_2" title="Special:XowaDownloadCentral" class="xowa-visited">Special:XowaDownloadCentral</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_2" title="Special:XowaDownloadCentral">Special:XowaDownloadCentral</a>
       </dd>
     </dl>
     <h3>
