--- a/home/wiki/Diagnostics.html
+++ b/home/wiki/Diagnostics.html
@@ -28,7 +28,7 @@
         <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/All.html" id="xolnki_2" title="Diagnostics/Javascript/All">Diagnostics/Javascript/All</a> 
         <ul>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Table_of_contents.html" id="xolnki_3" title="Diagnostics/Javascript/Table of contents" class="xowa-visited">Diagnostics/Javascript/Table_of_contents</a>
+            <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Table_of_contents.html" id="xolnki_3" title="Diagnostics/Javascript/Table of contents">Diagnostics/Javascript/Table_of_contents</a>
           </li>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Redlink.html" id="xolnki_4" title="Diagnostics/Javascript/Redlink">Diagnostics/Javascript/Redlink</a>
@@ -75,10 +75,10 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Diagnostics/HTML_Tidy.html" id="xolnki_14" title="Diagnostics/HTML Tidy" class="xowa-visited">Diagnostics/HTML_Tidy</a>
+        <a href="http://xowa.org/home/wiki/Diagnostics/HTML_Tidy.html" id="xolnki_14" title="Diagnostics/HTML Tidy">Diagnostics/HTML_Tidy</a>
       </li>
       <li>
-        <a href="http://xowa.org/home/wiki/Diagnostics/JTidy.html" id="xolnki_15" title="Diagnostics/JTidy" class="xowa-visited">Diagnostics/JTidy</a>
+        <a href="http://xowa.org/home/wiki/Diagnostics/JTidy.html" id="xolnki_15" title="Diagnostics/JTidy">Diagnostics/JTidy</a>
       </li>
     </ul>
     <h2>
@@ -86,7 +86,7 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/All.html" id="xolnki_16" title="Diagnostics/Scribunto/All" class="xowa-visited">Diagnostics/Scribunto/All</a> 
+        <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/All.html" id="xolnki_16" title="Diagnostics/Scribunto/All">Diagnostics/Scribunto/All</a> 
         <ul>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Basic.html" id="xolnki_17" title="Diagnostics/Scribunto/Basic">Diagnostics/Scribunto/Basic</a>
@@ -151,7 +151,7 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_32" title="Diagnostics/Xtns/Wikivoyage/All" class="xowa-visited">Diagnostics/Xtns/Wikivoyage/All</a>
+        <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_32" title="Diagnostics/Xtns/Wikivoyage/All">Diagnostics/Xtns/Wikivoyage/All</a>
       </li>
     </ul>
     <h2>
