--- a/home/wiki/Diagnostics/HTML_Tidy.html
+++ b/home/wiki/Diagnostics/HTML_Tidy.html
@@ -21,7 +21,7 @@
       <span class="mw-headline" id="Overview">Overview</span>
     </h2>
     <p>
-      This page lists various tests showing the effect of HTML Tidy. Each &lt;h2&gt; section header below corresponds to a separate test. Enable / Disable HTML Tidy at <a href="http://xowa.org/home/wiki/Options/HTML_Tidy.html" id="xolnki_2" title="Options/HTML Tidy" class="xowa-visited">Options/HTML_Tidy</a> to see the difference (or press F7 to toggle on and off).
+      This page lists various tests showing the effect of HTML Tidy. Each &lt;h2&gt; section header below corresponds to a separate test. Enable / Disable HTML Tidy at <a href="http://xowa.org/home/wiki/Options/HTML_Tidy.html" id="xolnki_2" title="Options/HTML Tidy">Options/HTML_Tidy</a> to see the difference (or press F7 to toggle on and off).
     </p>
     <p>
       <br>
