--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -60,10 +60,10 @@
               <a href="http://xowa.org/home/wiki/App/Import/Simple_Wikipedia.html" id="xolnki_7" title="App/Import/Simple Wikipedia">Simple Wikipedia</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_8" title="App/Import/English Wikipedia">English Wikipedia</a>
+              <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_8" title="App/Import/English Wikipedia" class="xowa-visited">English Wikipedia</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Other_wikis.html" id="xolnki_9" title="App/Import/Other wikis" class="xowa-visited">Other wikis</a>
+              <a href="http://xowa.org/home/wiki/App/Import/Other_wikis.html" id="xolnki_9" title="App/Import/Other wikis">Other wikis</a>
             </li>
           </ul>
         </td>
@@ -187,7 +187,7 @@
               <a href="http://xowa.org/home/wiki/Dev/Command-line/Wikidata.html" id="xolnki_26" title="Dev/Command-line/Wikidata">Wikidata</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Command-line/Site_meta.html" id="xolnki_27" title="Dev/Command-line/Site meta" class="xowa-visited">Site meta</a>
+              <a href="http://xowa.org/home/wiki/Dev/Command-line/Site_meta.html" id="xolnki_27" title="Dev/Command-line/Site meta">Site meta</a>
             </li>
           </ul>
         </td>
@@ -213,7 +213,7 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Shrinking.html" id="xolnki_31" title="App/Import/Shrinking">Shrinking a wiki</a>
+              <a href="http://xowa.org/home/wiki/App/Import/Shrinking.html" id="xolnki_31" title="App/Import/Shrinking" class="xowa-visited">Shrinking a wiki</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Setup/Flash_card.html" id="xolnki_32" title="App/Setup/Flash card">Installing to a flash card</a>
@@ -264,7 +264,7 @@
               <a href="http://xowa.org/home/wiki/App/Xtn/Html/Scripts.html" id="xolnki_40" title="App/Xtn/Html/Scripts">Sortable/collapsible tables</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_41" title="App/Xtn/Import/Dansguardian" class="xowa-visited">Dansguardian filter</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Import/Dansguardian.html" id="xolnki_41" title="App/Xtn/Import/Dansguardian">Dansguardian filter</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_42" title="App/Xtn/Browser/XOWA viewer">Firefox Addon</a>
@@ -277,7 +277,7 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_43" title="Diagnostics" class="xowa-visited">Diagnostics</a>
+              <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_43" title="Diagnostics">Diagnostics</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Setup/Installation/Self_extracting_exe.html" id="xolnki_44" title="App/Setup/Installation/Self extracting exe">Self extracting exe</a>
@@ -378,7 +378,7 @@
               <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikidata.html" id="xolnki_61" title="App/Wiki types/Wikidata">Wikis/Wikidata</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Wiki_types/Commons.html" id="xolnki_62" title="App/Wiki types/Commons" class="xowa-visited">Wikis/Commons</a>
+              <a href="http://xowa.org/home/wiki/App/Wiki_types/Commons.html" id="xolnki_62" title="App/Wiki types/Commons">Wikis/Commons</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Basics/Files.html" id="xolnki_63" title="App/Basics/Files">Files</a>
