--- a/home/wiki/Options.html
+++ b/home/wiki/Options.html
@@ -320,7 +320,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_2" title="Options/Window" class="xowa-visited">Window</a>
+              <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_2" title="Options/Window">Window</a>
             </td>
             <td>
               Window Font and Startup position
@@ -328,7 +328,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_3" title="Options/Language" class="xowa-visited">Language</a>
+              <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_3" title="Options/Language">Language</a>
             </td>
             <td>
               UI Language
@@ -336,7 +336,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_4" title="Options/Tabs" class="xowa-visited">Tabs</a>
+              <a href="http://xowa.org/home/wiki/Options/Tabs.html" id="xolnki_4" title="Options/Tabs">Tabs</a>
             </td>
             <td>
               Tab appearance and behavior
@@ -426,7 +426,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Import_Dansguardian.html" id="xolnki_14" title="Options/Import Dansguardian" class="xowa-visited">Import Dansguardian</a>
+              <a href="http://xowa.org/home/wiki/Options/Import_Dansguardian.html" id="xolnki_14" title="Options/Import Dansguardian">Import Dansguardian</a>
             </td>
             <td>
               Import using Dansguardian filters
@@ -439,7 +439,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_15" title="Options/HTML" class="xowa-visited">Appearance</a>
+              <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_15" title="Options/HTML">Appearance</a>
             </td>
             <td>
               HTML page font and custom CSS
@@ -455,7 +455,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTML_Tidy.html" id="xolnki_17" title="Options/HTML Tidy" class="xowa-visited">Tidy</a>
+              <a href="http://xowa.org/home/wiki/Options/HTML_Tidy.html" id="xolnki_17" title="Options/HTML Tidy">Tidy</a>
             </td>
             <td>
               HTML Tidy options
@@ -497,7 +497,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_21" title="Options/Search suggest" class="xowa-visited">Search suggest</a>
+              <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_21" title="Options/Search suggest">Search suggest</a>
             </td>
             <td>
               Search suggest options (controls behavior in the search box)
@@ -526,7 +526,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_24" title="Options/Math" class="xowa-visited">Math</a>
+              <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_24" title="Options/Math">Math</a>
             </td>
             <td>
               Math options (text called in an {{#math}} statement)
@@ -534,7 +534,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_25" title="Options/Scribunto" class="xowa-visited">Scribunto</a>
+              <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_25" title="Options/Scribunto">Scribunto</a>
             </td>
             <td>
               Scribunto/Lua options (text called in an {{#invoke}} statement)
