--- a/home/wiki/Options/HTML_Tidy.html
+++ b/home/wiki/Options/HTML_Tidy.html
@@ -293,7 +293,7 @@ li.active a, li.active a:hover
         </div><br>
          
         <p>
-          HTML Tidy is a software library whose purpose is to fix invalid HTML. It is enabled on all Wikimedia wikis. Without HTML Tidy, a small percentage of pages will render incorrectly (broken tables; extended bold; horizontal scroll bar; misplaced images), etc. See <a href="http://xowa.org/home/wiki/Diagnostics/HTML_Tidy.html" id="xolnki_2" title="Diagnostics/HTML Tidy" class="xowa-visited">Diagnostics/HTML_Tidy</a> for examples.
+          HTML Tidy is a software library whose purpose is to fix invalid HTML. It is enabled on all Wikimedia wikis. Without HTML Tidy, a small percentage of pages will render incorrectly (broken tables; extended bold; horizontal scroll bar; misplaced images), etc. See <a href="http://xowa.org/home/wiki/Diagnostics/HTML_Tidy.html" id="xolnki_2" title="Diagnostics/HTML Tidy">Diagnostics/HTML_Tidy</a> for examples.
         </p>
         <p>
           For more info about XOWA's customized JTidy jar, see <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Tidy/JTidy.html" id="xolnki_3" title="App/Xtn/Mediawiki/Tidy/JTidy">App/Xtn/Mediawiki/Tidy/JTidy</a>
