--- a/home/wiki/Options/Scribunto.html
+++ b/home/wiki/Options/Scribunto.html
@@ -403,7 +403,7 @@ li.active a, li.active a:hover
                 <span class="reference-text"><b>executable permissions</b>: Linux / Mac OS X users may need to grant execute permission to the Lua binary. To ensure proper setup, please do the following:</span>
                 <ul>
                   <li>
-                    <span class="reference-text">Open <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/All.html" id="xolnki_3" title="Diagnostics/Scribunto/All" class="xowa-visited">Diagnostics/Scribunto/All</a></span>
+                    <span class="reference-text">Open <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/All.html" id="xolnki_3" title="Diagnostics/Scribunto/All">Diagnostics/Scribunto/All</a></span>
                   </li>
                   <li>
                     <span class="reference-text">If the page fails, then see <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Scribunto.html#Permissions" id="xolnki_4" title="App/Xtn/Mediawiki/Scribunto">App/Xtn/Mediawiki/Scribunto#Permissions</a></span>
