--- a/home/wiki/Options/Wiki/HTML.html
+++ b/home/wiki/Options/Wiki/HTML.html
@@ -504,7 +504,7 @@ li.active a, li.active a:hover
             </ul><span class="reference-text">Saving the hide/show setting on a page by page basis will be supported in a future version, but probably not anytime soon.</span>
           </li>
           <li id="cite_note-collapsible_toc-6">
-            <span class="mw-cite-backlink"><a href="#cite_ref-collapsible_toc_6-0">^</a></span> <span class="reference-text">All table of contents have a Show / Hide link. See <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Table_of_contents.html" id="xolnki_2" title="Diagnostics/Javascript/Table of contents" class="xowa-visited">Diagnostics/Javascript/Table_of_contents</a><br>
+            <span class="mw-cite-backlink"><a href="#cite_ref-collapsible_toc_6-0">^</a></span> <span class="reference-text">All table of contents have a Show / Hide link. See <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Table_of_contents.html" id="xolnki_2" title="Diagnostics/Javascript/Table of contents">Diagnostics/Javascript/Table_of_contents</a><br>
             Choose one of the following (default is <code>unchecked</code>)</span>
             <ul>
               <li>
