--- a/home/wiki/Options/Wikibase.html
+++ b/home/wiki/Options/Wikibase.html
@@ -344,7 +344,7 @@ en;de;es;fr;it;nl;pl;ru;sv
         </h2>
         <ol class="references">
           <li id="cite_note-core_langs-0">
-            <span class="mw-cite-backlink"><a href="#cite_ref-core_langs_0-0">^</a></span> <span class="reference-text">Enter multiple language codes separated by a semi-colon. See <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_2" title="Options/Language" class="xowa-visited">Options/Language</a> for a full list of valid language codes. (default is <code>en</code>)<br>
+            <span class="mw-cite-backlink"><a href="#cite_ref-core_langs_0-0">^</a></span> <span class="reference-text">Enter multiple language codes separated by a semi-colon. See <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_2" title="Options/Language">Options/Language</a> for a full list of valid language codes. (default is <code>en</code>)<br>
              The text languages are used for the following:</span>
             <ul>
               <li>
