--- a/home/wiki/App/Xtn/Import/Dansguardian.html
+++ b/home/wiki/App/Xtn/Import/Dansguardian.html
@@ -78,7 +78,7 @@
       <span class="mw-headline" id="Options">Options</span>
     </h2>
     <p>
-      See <a href="http://xowa.org/home/wiki/Options/Import_Dansguardian.html" id="xolnki_2" title="Options/Import Dansguardian" class="xowa-visited">Options/Import_Dansguardian</a>
+      See <a href="http://xowa.org/home/wiki/Options/Import_Dansguardian.html" id="xolnki_2" title="Options/Import Dansguardian">Options/Import_Dansguardian</a>
     </p>
     <h2>
       <span class="mw-headline" id="Phraselists">Phraselists</span>
@@ -197,14 +197,14 @@
         Similarly "earth planet something earth planet something earth planet something" would have a score of 240 because it matches "earth planet" 3 times (90) and "planet" 3 times (150)
       </li>
       <li>
-        However "earth planet something earth planet something earth" only has a score of 160 because it only matches the "earth planet" rule 2 times "60" and the planet rule 2 times (100)
+        However "earth planet something earth planet something earth" only has a score of 160 because it only matches the "earth planet" rule 2 times (60) and the planet rule 2 times (100)
       </li>
     </ul>
     <h2>
       <span class="mw-headline" id="Exclusion">Exclusion</span>
     </h2>
     <p>
-      By default, anything that matches a rule (has a score &gt; 0) will be excluded. Note that this exclude number can be raised from 0 to something higher like 100. See <a href="http://xowa.org/home/wiki/Options/Import_Dansguardian.html" id="xolnki_3" title="Options/Import Dansguardian" class="xowa-visited">Options/Import_Dansguardian</a>
+      By default, anything that matches a rule (has a score &gt; 0) will be excluded. Note that this exclude number can be raised from 0 to something higher like 100. See <a href="http://xowa.org/home/wiki/Options/Import_Dansguardian.html" id="xolnki_3" title="Options/Import Dansguardian">Options/Import_Dansguardian</a>
     </p>
     <h2>
       <span class="mw-headline" id="Inclusion">Inclusion</span>
