--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -445,7 +445,7 @@
     </p>
     <ul>
       <li>
-        (add) Search: Added search suggest v2 for more accurate results {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_7" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
+        (add) Search: Added search suggest v2 for more accurate results {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_7" title="Options/Search suggest">Options/Search_suggest</a>
       </li>
       <li>
         (add) Scribunto: Fixed "Citation needed" for 2013-12-04 English Wikipedia; EX:mw.isSubsting. See: <a href="http://en.wikipedia.org/wiki/Albedo" rel="nofollow" class="external free">http://en.wikipedia.org/wiki/Albedo</a>
@@ -457,7 +457,7 @@
         (add) Server: Added alpha HTTP server {contributed by Mattze96 }. See: <a href="http://xowa.org/home/wiki/App/Xtn/Browser/HTTP_Server.html" id="xolnki_8" title="App/Xtn/Browser/HTTP Server">App/Xtn/Browser/HTTP_Server</a>
       </li>
       <li>
-        (add) Translation: Added translations for Simplified Chinese and Traditional Chinese {contributed by zjzengdongyang}. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_9" title="Options/Language" class="xowa-visited">Options/Language</a>
+        (add) Translation: Added translations for Simplified Chinese and Traditional Chinese {contributed by zjzengdongyang}. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_9" title="Options/Language">Options/Language</a>
       </li>
     </ul>
     <p>
@@ -576,7 +576,7 @@
     </p>
     <ul>
       <li>
-        (add) Torrents for English Wikipedia images.. See <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_12" title="App/Import/English Wikipedia">App/Import/English_Wikipedia</a> and <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_13" title="Dashboard/Image databases">Dashboard/Image_databases</a>
+        (add) Torrents for English Wikipedia images.. See <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_12" title="App/Import/English Wikipedia" class="xowa-visited">App/Import/English_Wikipedia</a> and <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_13" title="Dashboard/Image databases">Dashboard/Image_databases</a>
       </li>
       <li>
         (fix) [broken since:v0.4.4] Xnde: Incorrect parsing of xml attributes with embedded apostrophe / quote; EX:a = "b'c" -&gt; a = "bc". See: <a href="http://en.wikisource.org/wiki/Alice's_Adventures_in_Wonderland" rel="nofollow" class="external free">http://en.wikisource.org/wiki/Alice's_Adventures_in_Wonderland</a>
@@ -800,7 +800,7 @@
         (done) Search: Search allows manually specifying additional namespaces.
       </li>
       <li>
-        (done) Search: Search allows default url arguments; EX:ns0=1&amp;ns14=1. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_16" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
+        (done) Search: Search allows default url arguments; EX:ns0=1&amp;ns14=1. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_16" title="Options/Search suggest">Options/Search_suggest</a>
       </li>
       <li>
         (fix) [broken since:v0.7.3] Import: Import fails if data_storage_format is not .gz.
@@ -871,7 +871,7 @@
         (fix) [broken since:v0.9.3] Gallery: Gallery items with no caption would cause page to fail; EX:&lt;gallery&gt;File:A.png&lt;/gallery&gt; {detected by Schnark}. See: <a href="http://de.wikipedia.org/wiki/Lewis_Carroll" rel="nofollow" class="external free">http://de.wikipedia.org/wiki/Lewis_Carroll</a>
       </li>
       <li>
-        (add) Gui: HTML box adjustment for Large fonts and Extra large fonts. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_17" title="Options/Window" class="xowa-visited">Options/Window</a>
+        (add) Gui: HTML box adjustment for Large fonts and Extra large fonts. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_17" title="Options/Window">Options/Window</a>
       </li>
       <li>
         (file) [broken since:v0.9.3] Import: Search version2 fails if explicitly added to normal import (which uses search version2 by default).
@@ -1167,7 +1167,7 @@
         (add) Addon: Wikidata JSON formatter works for addon.
       </li>
       <li>
-        (add) Search: Search now has auto-wildcard option; EX:Earth -&gt; Earth* {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_23" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
+        (add) Search: Search now has auto-wildcard option; EX:Earth -&gt; Earth* {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_23" title="Options/Search suggest">Options/Search_suggest</a>
       </li>
       <li>
         (add) Import: Option to not automatically delete xml file after import {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_24" title="Options/Import" class="xowa-visited">Options/Import</a>
@@ -1497,7 +1497,7 @@
         (add) Wikidata: Lua Wikibase support added. See: <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/WikibaseLibrary.html" id="xolnki_34" title="Diagnostics/Scribunto/WikibaseLibrary">Diagnostics/Scribunto/WikibaseLibrary</a>
       </li>
       <li>
-        (add) Import: Wikiquote wikis added to Import/List. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_35" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
+        (add) Import: Wikiquote wikis added to Import/List. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_35" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
       </li>
       <li>
         (fix) Import: Import failed to "read from file" if wiki.unzip was present.
@@ -1688,7 +1688,7 @@
         (fix) Search: Search broken when not using search suggestions {detected by hidp123;anonymous7}.
       </li>
       <li>
-        (add) Search: Search now supports AllPages mode {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_38" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
+        (add) Search: Search now supports AllPages mode {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_38" title="Options/Search suggest">Options/Search_suggest</a>
       </li>
       <li>
         (add) Import: Import/Script redesigned to be more intuitive {contributed by Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_39" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
@@ -1734,7 +1734,7 @@
     </p>
     <ul>
       <li>
-        (add) Search: Dynamic search suggestions; EX:Go to search box and start typing "e" "a" "r" "t" "h" {contributed by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_40" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
+        (add) Search: Dynamic search suggestions; EX:Go to search box and start typing "e" "a" "r" "t" "h" {contributed by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_40" title="Options/Search suggest">Options/Search_suggest</a>
       </li>
       <li>
         (fix) Xtn/Lst: Lst handles recursive {{#lst}} calls; EX:http://it.wikisource.org {detected by Joe Webber}. See: <a href="http://it.wikisource.org" rel="nofollow" class="external free">http://it.wikisource.org</a>
@@ -2215,7 +2215,7 @@
     </p>
     <ul>
       <li>
-        (add) Missing talk/user namespace links can be configured to show red/hidden {requested by Schnark} See <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_54" title="Options/HTML" class="xowa-visited">Options/HTML</a>
+        (add) Missing talk/user namespace links can be configured to show red/hidden {requested by Schnark} See <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_54" title="Options/HTML">Options/HTML</a>
       </li>
       <li>
         (add) Visited pages now color-coded {assisted by Schnark}
@@ -2327,7 +2327,7 @@
     </p>
     <ul>
       <li>
-        (add) Preliminary support for Scribunto/Lua. See <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_57" title="Options/Scribunto" class="xowa-visited">Options/Scribunto</a>
+        (add) Preliminary support for Scribunto/Lua. See <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_57" title="Options/Scribunto">Options/Scribunto</a>
       </li>
       <li>
         (add) Improvements to Schnark's Javascript Timeline {contributed by Schnark}
