--- a/home/wiki/Change_log/v3.7.4.1.html
+++ b/home/wiki/Change_log/v3.7.4.1.html
@@ -25,7 +25,7 @@
       </div>
       <ul>
         <li class="toclevel-1 tocsection-1">
-          <a href="#v3.7.4.1_.282017-07-25.29"><span class="tocnumber">1</span> <span class="toctext">v3.7.4.1 (2017-07-25)</span></a> 
+          <a href="#v3.7.4.1_.282016-07-25.29"><span class="tocnumber">1</span> <span class="toctext">v3.7.4.1 (2016-07-25)</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-2">
               <a href="#Wiki"><span class="tocnumber">1.1</span> <span class="toctext">Wiki</span></a>
@@ -44,7 +44,7 @@
       </ul>
     </div>
     <h2>
-      <span class="mw-headline" id="v3.7.4.1_.282017-07-25.29">v3.7.4.1 (2017-07-25)</span>
+      <span class="mw-headline" id="v3.7.4.1_.282016-07-25.29">v3.7.4.1 (2016-07-25)</span>
     </h2>
     <h3>
       <span class="mw-headline" id="Wiki">Wiki</span>
@@ -88,7 +88,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Invalidate all Scribunto engines across all wikis when disabled.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_2" title="Options/Scribunto" class="xowa-visited">Options/Scribunto</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_2" title="Options/Scribunto">Options/Scribunto</a>
       </dd>
     </dl>
     <ul>
