--- a/home/wiki/Change_log/v3.8.1.1.html
+++ b/home/wiki/Change_log/v3.8.1.1.html
@@ -2,7 +2,7 @@
 <html dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Change log/v3.7.2.1 - XOWA</title>
+  <title>Change log/v3.8.1.1 - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
   
@@ -11,7 +11,7 @@
 <div id="mw-page-base" class="noprint"></div>
 <div id="mw-head-base" class="noprint"></div>
 <div id="content" class="mw-body">
-  <h1 id="firstHeading" class="firstHeading"><span>Change log/v3.7.2.1</span></h1>
+  <h1 id="firstHeading" class="firstHeading"><span>Change log/v3.8.1.1</span></h1>
   <div id="bodyContent" class="mw-body-content">
     <div id="siteSub">From XOWA: the free, open-source, offline wiki application</div>
     <div id="contentSub"></div>
@@ -25,7 +25,7 @@
       </div>
       <ul>
         <li class="toclevel-1 tocsection-1">
-          <a href="#v3.7.2.1_.282017-07-10.29"><span class="tocnumber">1</span> <span class="toctext">v3.7.2.1 (2017-07-10)</span></a> 
+          <a href="#v3.8.1.1_.282016-08-01.29"><span class="tocnumber">1</span> <span class="toctext">v3.8.1.1 (2016-08-01)</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-2">
               <a href="#Wiki"><span class="tocnumber">1.1</span> <span class="toctext">Wiki</span></a>
@@ -34,29 +34,29 @@
               <a href="#PC"><span class="tocnumber">1.2</span> <span class="toctext">PC</span></a>
             </li>
             <li class="toclevel-2 tocsection-4">
-              <a href="#Server"><span class="tocnumber">1.3</span> <span class="toctext">Server</span></a>
+              <a href="#Android"><span class="tocnumber">1.3</span> <span class="toctext">Android</span></a>
             </li>
             <li class="toclevel-2 tocsection-5">
-              <a href="#Android"><span class="tocnumber">1.4</span> <span class="toctext">Android</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-6">
-              <a href="#Dev"><span class="tocnumber">1.5</span> <span class="toctext">Dev</span></a>
+              <a href="#Dev"><span class="tocnumber">1.4</span> <span class="toctext">Dev</span></a>
             </li>
           </ul>
         </li>
       </ul>
     </div>
     <h2>
-      <span class="mw-headline" id="v3.7.2.1_.282017-07-10.29">v3.7.2.1 (2017-07-10)</span>
+      <span class="mw-headline" id="v3.8.1.1_.282016-08-01.29">v3.8.1.1 (2016-08-01)</span>
     </h2>
     <h3>
       <span class="mw-headline" id="Wiki">Wiki</span>
     </h3>
     <ul>
       <li>
-        Wiki: Publish Haitian wikis. {requested by NickRance}
+        Package: Publish 2016-07 Arabic Wiktionary, Wikisource, Wikiquote, Wikibooks, Wikiversity, and Wikinews.
       </li>
     </ul>
+    <p>
+      <br>
+    </p>
     <h3>
       <span class="mw-headline" id="PC">PC</span>
     </h3>
@@ -65,139 +65,83 @@
     </p>
     <ul>
       <li>
-        Import: Fix 2016-07 English Wikipedia import failing.
+        Redirect: Fix redirect link showing "Redirected from [destination-page]" instead of "Redirected from [source-page]". [broken since: v3.7.1.1]
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Search for "PRIMARY KEY" if "UNIQUE KEY" is missing.
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_2" title="Blog">Blog</a> <a href="https://en.wikipedia.org/wiki/UK" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/UK</a> <a href="https://en.wikipedia.org/wiki/Special:Random" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Special:Random</a>
       </dd>
     </dl>
-    <ul>
-      <li>
-        HtmlView: Support Table Of Contents.
-      </li>
-    </ul>
-    <ul>
-      <li>
-        Import: Include mwad (MediaWiki API dump) for creating XML dumps for Wikia and other wikis. {contributed by Mattze96}
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Import/mwad.html" id="xolnki_2" title="App/Import/mwad">App/Import/mwad</a>
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Install: Require Java 1.7, not Java 1.8. [broken since: v3.3.4.1]
-      </li>
-    </ul>
     <p>
       <b>minor</b>
     </p>
     <ul>
       <li>
-        Wikibase: Fix script error for "Module:Wikidata:500 unknown datavalue type." on many ht.w pages.
+        Redirect: Fix redirect link showing "Redirected from [destination-page]" instead of "Redirected from [source-page]". [broken since: v3.7.1.1]
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Change "wikibase-entityid" to "wikibase-item".
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Example</span>: Erreur de script: =Module:Wikidata:500 unknown datavalue type..
-      </dd>
-      <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://ht.wikipedia.org/wiki/Srilanka" rel="nofollow" class="external free">https://ht.wikipedia.org/wiki/Srilanka</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_3" title="Blog">Blog</a>
       </dd>
     </dl>
     <ul>
       <li>
-        Wikibase: Show specieswiki links in "In Other Languages". [broken since: v3.6.4.1]
+        Wikibase: Fix a few dozen script errors for ClassCast on fr.w pages.
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Change "specieswiki" abbreviation from ".species" to "species".
+        <span style='font-variant:small-caps'>Resolved by</span>: Support "renderSnaks".
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Example</span>: Erreur de script: @C:/xowa/bin/any/xowa/xtns/Scribunto/engines/Luaj/MWServer.lua:59 vm error: java.lang.ClassCastException: [Lgplx.Keyval; cannot be cast to java.lang.String.
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Acte_de_Médiation" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Acte_de_Médiation</a>
       </dd>
     </dl>
     <ul>
       <li>
-        Special: Enable delete on Special:XowaWikiInfo.
+        Wikibase: Fix one script error for ClassCast on en.v pages.
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaWikiInfo%3Fwiki%3Dsimple.wikipedia.org.html" id="xolnki_3" title="Special:XowaWikiInfo?wiki=simple.wikipedia.org">Special:XowaWikiInfo?wiki=simple.wikipedia.org</a>
+        <span style='font-variant:small-caps'>Resolved by</span>: Support "renderSnak".
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikivoyage.org/wiki/Wikivoyage:Travellers'_pub" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Wikivoyage:Travellers'_pub</a>
       </dd>
     </dl>
-    <p>
-      <b>trivial</b>
-    </p>
-    <ul>
-      <li>
-        Wikibase: Add "jamwiki" to list of known wikis.
-      </li>
-    </ul>
-    <ul>
-      <li>
-        Lang: Add new languages: aeb-arab; aeb-latn; dty; gor; lki; olo.
-      </li>
-    </ul>
-    <h3>
-      <span class="mw-headline" id="Server">Server</span>
-    </h3>
-    <p>
-      <b>major</b>
-    </p>
-    <ul>
-      <li>
-        HTTP Server: Fix images not showing when using "text" databases. [broken since: v3.6.3.4] {detected by ve3lst}
-      </li>
-    </ul>
     <h3>
       <span class="mw-headline" id="Android">Android</span>
     </h3>
-    <p>
-      <b>minor</b>
-    </p>
     <ul>
       <li>
-        HtmlView: Ignore Table of Content markers.
+        DownloadCentral: Fix random failure when restarting XOWA while downloading wikis. {detected by anonymous}
       </li>
     </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Assert application is not null when setting callback.
+      </dd>
+    </dl>
+    <p>
+      <br>
+    </p>
     <h3>
       <span class="mw-headline" id="Dev">Dev</span>
     </h3>
     <ul>
       <li>
-        Php_parser: Parse "[" and "]" as array.
-      </li>
-    </ul>
-    <dl>
-      <dd>
-        <span style='font-variant:small-caps'>Example</span>: ['a', 'b'] == array('a', 'b').
-      </dd>
-    </dl>
-    <ul>
-      <li>
-        Source: Make parser code thread safe.
+        Source: Refactor wikibase enums.
       </li>
     </ul>
     <ul>
       <li>
-        Source: Change Scrib_core from static to instance.
-      </li>
-    </ul>
-    <ul>
-      <li>
-        Source: Refactor Xoa_ttl.
-      </li>
-    </ul>
-    <ul>
-      <li>
-        Source: Consolidate Redirect methods on Page.
+        Html_dump: Add html_dump comparision.
       </li>
     </ul>
   
