--- a/home/wiki/Help/Download_XOWA.html
+++ b/home/wiki/Help/Download_XOWA.html
@@ -28,10 +28,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.4.1/xowa_app_windows_64_v3.7.4.1.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.8.1.1/xowa_app_windows_64_v3.8.1.1.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.4.1/xowa_app_windows_v3.7.4.1.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.8.1.1/xowa_app_windows_v3.8.1.1.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -39,10 +39,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.4.1/xowa_app_linux_64_v3.7.4.1.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.8.1.1/xowa_app_linux_64_v3.8.1.1.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.4.1/xowa_app_linux_v3.7.4.1.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.8.1.1/xowa_app_linux_v3.8.1.1.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -50,10 +50,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.4.1/xowa_app_macosx_64_v3.7.4.1.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.8.1.1/xowa_app_macosx_64_v3.8.1.1.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.4.1/xowa_app_macosx_v3.7.4.1.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.8.1.1/xowa_app_macosx_v3.8.1.1.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -61,7 +61,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.4.1/xowa_app_arm_v3.7.4.1.zip" rel="nofollow" class="external text">Raspberry Pi</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.8.1.1/xowa_app_arm_v3.8.1.1.zip" rel="nofollow" class="external text">Raspberry Pi</a>
       </li>
     </ul>
     <h2>
@@ -69,7 +69,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.7.4.1/xowa_app_android_v3.7.4.1.apk" rel="nofollow" class="external text">Android</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.8.1.1/xowa_app_android_v3.8.1.1.apk" rel="nofollow" class="external text">Android</a>
       </li>
     </ul>
     <h2>
@@ -77,7 +77,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/archive/v3.7.4.1.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
+        <a href="https://github.com/gnosygnu/xowa/archive/v3.8.1.1.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
       </li>
     </ul>
     <h2>
@@ -89,61 +89,75 @@
       </li>
     </ul>
     <h2>
-      <span class="mw-headline" id="v3.7.4.1_.282017-07-25.29">v3.7.4.1 (2017-07-25)</span>
+      <span class="mw-headline" id="v3.8.1.1_.282016-08-01.29">v3.8.1.1 (2016-08-01)</span>
     </h2>
     <h3>
       <span class="mw-headline" id="Wiki">Wiki</span>
     </h3>
     <ul>
       <li>
-        Wiki: Publish 2016-07 English Wikipedia
+        Package: Publish 2016-07 Arabic Wiktionary, Wikisource, Wikiquote, Wikibooks, Wikiversity, and Wikinews.
       </li>
     </ul>
+    <p>
+      <br>
+    </p>
     <h3>
       <span class="mw-headline" id="PC">PC</span>
     </h3>
+    <p>
+      <b>major</b>
+    </p>
+    <ul>
+      <li>
+        Redirect: Fix redirect link showing "Redirected from [destination-page]" instead of "Redirected from [source-page]". [broken since: v3.7.1.1]
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_3" title="Blog">Blog</a> <a href="https://en.wikipedia.org/wiki/UK" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/UK</a> <a href="https://en.wikipedia.org/wiki/Special:Random" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Special:Random</a>
+      </dd>
+    </dl>
     <p>
       <b>minor</b>
     </p>
     <ul>
       <li>
-        Command-line: Fix automatic deletion of pagelinks file. {detected by anonymous}
-      </li>
-    </ul>
-    <p>
-      <b>trivial</b>
-    </p>
-    <ul>
-      <li>
-        Gui: Do not show blank page when restoring page with anchor at application startup.
+        Redirect: Fix redirect link showing "Redirected from [destination-page]" instead of "Redirected from [source-page]". [broken since: v3.7.1.1]
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Example</span>: /home/wiki/Main_Page#Links.
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_4" title="Blog">Blog</a>
       </dd>
     </dl>
     <ul>
       <li>
-        Options: Immediately update Enabled flag in Options/Scribunto (instead of forcing reboot).
+        Wikibase: Fix a few dozen script errors for ClassCast on fr.w pages.
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Invalidate all Scribunto engines across all wikis when disabled.
+        <span style='font-variant:small-caps'>Resolved by</span>: Support "renderSnaks".
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_3" title="Options/Scribunto" class="xowa-visited">Options/Scribunto</a>
+        <span style='font-variant:small-caps'>Example</span>: Erreur de script: @C:/xowa/bin/any/xowa/xtns/Scribunto/engines/Luaj/MWServer.lua:59 vm error: java.lang.ClassCastException: [Lgplx.Keyval; cannot be cast to java.lang.String.
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://fr.wikipedia.org/wiki/Acte_de_Médiation" rel="nofollow" class="external free">https://fr.wikipedia.org/wiki/Acte_de_Médiation</a>
       </dd>
     </dl>
     <ul>
       <li>
-        Log: Do not fail with OutOfMemoryError when loading Special:XowaSystemData.
+        Wikibase: Fix one script error for ClassCast on en.v pages.
       </li>
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Resolved by</span>: Only show last 1 MB of log file in browser.
+        <span style='font-variant:small-caps'>Resolved by</span>: Support "renderSnak".
+      </dd>
+      <dd>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikivoyage.org/wiki/Wikivoyage:Travellers'_pub" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Wikivoyage:Travellers'_pub</a>
       </dd>
     </dl>
     <h3>
@@ -151,20 +165,28 @@
     </h3>
     <ul>
       <li>
-        DownloadCentral: Add screen to change wiki location for XOWA app.
+        DownloadCentral: Fix random failure when restarting XOWA while downloading wikis. {detected by anonymous}
       </li>
     </ul>
-    <ul>
-      <li>
-        DownloadCentral: If unzip fails, restart from verify, not unzip.
-      </li>
-    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Assert application is not null when setting callback.
+      </dd>
+    </dl>
+    <p>
+      <br>
+    </p>
     <h3>
       <span class="mw-headline" id="Dev">Dev</span>
     </h3>
     <ul>
       <li>
-        Source: Fix thread-safe issues with wikibase and html generation.
+        Source: Refactor wikibase enums.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        Html_dump: Add html_dump comparision.
       </li>
     </ul>
   
